# PFG-discord-bot

./: .gitignore  Dockerfile.discord  Procfile  Procfile.txt  README.md  guilds  pyproject.toml
DataBases/: cursor.py  guilds
Discord/: cursor.py  guilds  helpers.py  main.py  statistic.py  task_time.py
config/: .env  settings.py
