[tool.poetry]
name = "dbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
discord = "^2.3.1"
loguru = "^0.7.0"
pytz = "^2023.3"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.1"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
